Adicionado suporte ao JPA, PostgreSQL e H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ponto-idace
+spring.datasource.url=jdbc:postgresql://localhost:5432/ponto-idace
+spring.datasource.username=postgres
+spring.datasource.password=Axp@01fal12
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
