Adicionadas anotações de @Column às variáveis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=ponto-idace
-spring.datasource.url=jdbc:postgresql://localhost:5432/ponto-idace
-spring.datasource.username=postgres
-spring.datasource.password=Axp@01fal12
+## PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.datasource.url=jdbc:postgresql://172.28.1.160:5432/sige
+spring.datasource.username=marcos.albano
+spring.datasource.password=Albano@1971
+
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=trace
+spring.http.encoding.enabled=true
+spring.http.encoding.charset=UTF-8
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 
