--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,16 @@
 			<version>4.13.2</version> <!-- Verifique se é a versão mais recente -->
 			<scope>test</scope>
 		</dependency>
+		<!--  Hibernate validator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!-- web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
