--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ponto-idace
-spring.datasource.url=jdbc:postgresql://localhost:5432/ponto-idace
-spring.datasource.username=postgres
-spring.datasource.password=Axp@01fal12
+spring.datasource.url=jdbc:postgresql://172.28.1.160:5432/ponto-idace
+spring.datasource.username=marcos.albano
+spring.datasource.password=Albano@1971
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
